[gd_scene load_steps=4 format=2]

[ext_resource path="res://pruebas.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://TextureButton.gd" type="Script" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_right = 64.0
margin_bottom = 64.0
texture_normal = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Tempo" type="Timer" parent="TextureButton"]
wait_time = 0.15
one_shot = true
[connection signal="button_down" from="TextureButton" to="TextureButton" method="_on_TextureButton_button_down"]
[connection signal="button_up" from="TextureButton" to="TextureButton" method="_on_TextureButton_button_up"]
[connection signal="pressed" from="TextureButton" to="TextureButton" method="_on_TextureButton_pressed"]
[connection signal="timeout" from="TextureButton/Tempo" to="TextureButton" method="_on_Timer_timeout"]
